// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar inserts extra buttons into the toolbar 1`] = `
<div>
  <Navbar
    className="toolbar_l6n5rs"
    expand="md"
    light={true}
    tag="nav"
  >
    <div
      className="filterBox_1kzbnzj"
      style={
        Object {
          "width": "22em",
        }
      }
    >
      <FilterBox
        handleNavFilter={[MockFunction]}
      />
    </div>
    <Collapse
      appear={false}
      className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="bars"
              inverse={false}
              key="navigation-view"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Navigation"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          key="expand-icon-item"
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="angle-double-down"
              inverse={false}
              key="expand-icon"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Expand all assertions"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          key="collapse-icon-item"
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="angle-double-up"
              inverse={false}
              key="collapse-icon"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Collapse all assertions"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          key="reset-button"
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f049",
                    "M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z",
                  ],
                  "iconName": "fast-backward",
                  "prefix": "fas",
                }
              }
              inverse={false}
              key="toolbar-reset"
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Reset state"
              transform={null}
            />
          </div>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <DropdownToggle
              aria-haspopup={true}
              className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
              color="secondary"
              nav={true}
            >
              <FontAwesomeIcon
                border={false}
                className="toolbarButton_1ueb7gu"
                fixedWidth={false}
                flip={null}
                icon="tasks"
                inverse={false}
                key="toolbar-details"
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                title="Choose details"
                transform={null}
              />
            </DropdownToggle>
          </div>
          <DropdownMenu
            className="dropdown_biw13d"
            flip={true}
            tag="div"
          >
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  name="filter"
                  onChange={[Function]}
                  type="checkbox"
                  value="time"
                />
                 
                Time Information
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  name="filter"
                  onChange={[Function]}
                  type="checkbox"
                  value="path"
                />
                 
                File Path
              </Label>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="info"
              inverse={false}
              key="toolbar-info"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Info"
              transform={null}
            />
          </div>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <DropdownToggle
              aria-haspopup={true}
              className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
              color="secondary"
              nav={true}
            >
              <FontAwesomeIcon
                border={false}
                className="toolbarButton_1ueb7gu"
                fixedWidth={false}
                flip={null}
                icon="filter"
                inverse={false}
                key="toolbar-filter"
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                title="Choose filter"
                transform={null}
              />
            </DropdownToggle>
          </div>
          <DropdownMenu
            className="dropdown_biw13d"
            flip={true}
            tag="div"
          >
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={true}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="all"
                />
                 
                All
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="fail"
                />
                 
                Failed only
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="pass"
                />
                 
                Passed only
              </Label>
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="displayEmptyTest"
                  onChange={[Function]}
                  type="checkbox"
                />
                 
                Hide empty testcase
              </Label>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="print"
              inverse={false}
              key="toolbar-print"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Print page"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="tags"
              inverse={false}
              key="toolbar-tags"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Display tags"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          tag="li"
        >
          <a
            className="buttonsBar_6zsntc"
            href="http://testplan.readthedocs.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="book"
              inverse={false}
              key="toolbar-document"
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Documentation"
              transform={null}
            />
          </a>
        </NavItem>
      </Nav>
    </Collapse>
  </Navbar>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="infoModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    returnFocusAfterClose={true}
    role="dialog"
    scrollable={false}
    size="lg"
    toggle={[Function]}
    unmountOnClose={true}
    zIndex={1050}
  >
    <ModalHeader
      charCode={215}
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Information
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      No information to display.
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`Toolbar shallow renders the correct HTML structure for batch mode 1`] = `
<div>
  <Navbar
    className="toolbar_l6n5rs"
    expand="md"
    light={true}
    tag="nav"
  >
    <div
      className="filterBox_1kzbnzj"
      style={
        Object {
          "width": "22em",
        }
      }
    >
      <FilterBox
        handleNavFilter={[MockFunction]}
      />
    </div>
    <Collapse
      appear={false}
      className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="bars"
              inverse={false}
              key="navigation-view"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Navigation"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          key="expand-icon-item"
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="angle-double-down"
              inverse={false}
              key="expand-icon"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Expand all assertions"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          key="collapse-icon-item"
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="angle-double-up"
              inverse={false}
              key="collapse-icon"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Collapse all assertions"
              transform={null}
            />
          </div>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <DropdownToggle
              aria-haspopup={true}
              className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
              color="secondary"
              nav={true}
            >
              <FontAwesomeIcon
                border={false}
                className="toolbarButton_1ueb7gu"
                fixedWidth={false}
                flip={null}
                icon="tasks"
                inverse={false}
                key="toolbar-details"
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                title="Choose details"
                transform={null}
              />
            </DropdownToggle>
          </div>
          <DropdownMenu
            className="dropdown_biw13d"
            flip={true}
            tag="div"
          >
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  name="filter"
                  onChange={[Function]}
                  type="checkbox"
                  value="time"
                />
                 
                Time Information
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  name="filter"
                  onChange={[Function]}
                  type="checkbox"
                  value="path"
                />
                 
                File Path
              </Label>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="info"
              inverse={false}
              key="toolbar-info"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Info"
              transform={null}
            />
          </div>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <DropdownToggle
              aria-haspopup={true}
              className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
              color="secondary"
              nav={true}
            >
              <FontAwesomeIcon
                border={false}
                className="toolbarButton_1ueb7gu"
                fixedWidth={false}
                flip={null}
                icon="filter"
                inverse={false}
                key="toolbar-filter"
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                title="Choose filter"
                transform={null}
              />
            </DropdownToggle>
          </div>
          <DropdownMenu
            className="dropdown_biw13d"
            flip={true}
            tag="div"
          >
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={true}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="all"
                />
                 
                All
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="fail"
                />
                 
                Failed only
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="pass"
                />
                 
                Passed only
              </Label>
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="displayEmptyTest"
                  onChange={[Function]}
                  type="checkbox"
                />
                 
                Hide empty testcase
              </Label>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="print"
              inverse={false}
              key="toolbar-print"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Print page"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="tags"
              inverse={false}
              key="toolbar-tags"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Display tags"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          tag="li"
        >
          <a
            className="buttonsBar_6zsntc"
            href="http://testplan.readthedocs.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="book"
              inverse={false}
              key="toolbar-document"
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Documentation"
              transform={null}
            />
          </a>
        </NavItem>
      </Nav>
    </Collapse>
  </Navbar>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="infoModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    returnFocusAfterClose={true}
    role="dialog"
    scrollable={false}
    size="lg"
    toggle={[Function]}
    unmountOnClose={true}
    zIndex={1050}
  >
    <ModalHeader
      charCode={215}
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Information
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      No information to display.
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`Toolbar shallow renders the correct HTML structure for interactive mode 1`] = `
<div>
  <Navbar
    className="toolbar_l6n5rs"
    expand="md"
    light={true}
    tag="nav"
  >
    <div
      className="filterBox_1kzbnzj"
      style={
        Object {
          "width": "22em",
        }
      }
    >
      <FilterBox
        handleNavFilter={[MockFunction]}
      />
    </div>
    <Collapse
      appear={false}
      className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="bars"
              inverse={false}
              key="navigation-view"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Navigation"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          key="expand-icon-item"
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="angle-double-down"
              inverse={false}
              key="expand-icon"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Expand all assertions"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          key="collapse-icon-item"
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="angle-double-up"
              inverse={false}
              key="collapse-icon"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Collapse all assertions"
              transform={null}
            />
          </div>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <DropdownToggle
              aria-haspopup={true}
              className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
              color="secondary"
              nav={true}
            >
              <FontAwesomeIcon
                border={false}
                className="toolbarButton_1ueb7gu"
                fixedWidth={false}
                flip={null}
                icon="tasks"
                inverse={false}
                key="toolbar-details"
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                title="Choose details"
                transform={null}
              />
            </DropdownToggle>
          </div>
          <DropdownMenu
            className="dropdown_biw13d"
            flip={true}
            tag="div"
          >
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  name="filter"
                  onChange={[Function]}
                  type="checkbox"
                  value="time"
                />
                 
                Time Information
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  name="filter"
                  onChange={[Function]}
                  type="checkbox"
                  value="path"
                />
                 
                File Path
              </Label>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="info"
              inverse={false}
              key="toolbar-info"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Info"
              transform={null}
            />
          </div>
        </NavItem>
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <DropdownToggle
              aria-haspopup={true}
              className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
              color="secondary"
              nav={true}
            >
              <FontAwesomeIcon
                border={false}
                className="toolbarButton_1ueb7gu"
                fixedWidth={false}
                flip={null}
                icon="filter"
                inverse={false}
                key="toolbar-filter"
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                title="Choose filter"
                transform={null}
              />
            </DropdownToggle>
          </div>
          <DropdownMenu
            className="dropdown_biw13d"
            flip={true}
            tag="div"
          >
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={true}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="all"
                />
                 
                All
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="fail"
                />
                 
                Failed only
              </Label>
            </DropdownItem>
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="filter"
                  onChange={[Function]}
                  type="radio"
                  value="pass"
                />
                 
                Passed only
              </Label>
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              className="dropdownItem_1bl0z5g"
              tag="button"
              toggle={false}
            >
              <Label
                check={true}
                className="filterLabel_17zzvy"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <Input
                  checked={false}
                  name="displayEmptyTest"
                  onChange={[Function]}
                  type="checkbox"
                />
                 
                Hide empty testcase
              </Label>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="print"
              inverse={false}
              key="toolbar-print"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Print page"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          tag="li"
        >
          <div
            className="buttonsBar_6zsntc"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="tags"
              inverse={false}
              key="toolbar-tags"
              listItem={false}
              mask={null}
              onClick={[Function]}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Display tags"
              transform={null}
            />
          </div>
        </NavItem>
        <NavItem
          tag="li"
        >
          <a
            className="buttonsBar_6zsntc"
            href="http://testplan.readthedocs.io"
            rel="noopener noreferrer"
            target="_blank"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_1ueb7gu"
              fixedWidth={false}
              flip={null}
              icon="book"
              inverse={false}
              key="toolbar-document"
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Documentation"
              transform={null}
            />
          </a>
        </NavItem>
      </Nav>
    </Collapse>
  </Navbar>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="infoModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    returnFocusAfterClose={true}
    role="dialog"
    scrollable={false}
    size="lg"
    toggle={[Function]}
    unmountOnClose={true}
    zIndex={1050}
  >
    <ModalHeader
      charCode={215}
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Information
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      No information to display.
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;
